--- a/packages/container/public/index.html
+++ b/packages/container/public/index.html
@@ -3,6 +3,6 @@
   <head></head>
   <body>
     <div id="root"></div>
-    <div id="rooter"></div>
+    <div id="rooter11"></div>
   </body>
 </html>
