--- a/packages/container/public/index.html
+++ b/packages/container/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head></head>
   <body>
-    <div id="rooterss"></div>
+    <div id="rooterssss"></div>
     <div id="rooter"></div>
     <div id="root"></div>
   </body>
